<resources>
    <string name="app_name">HackDayIMED</string>
    <string name="numero_cartao">Número do Cartão</string>
    <string name="numero_cartao_hint">0000 0000 0000 0000</string>
    <string name="vencimento">Vencimento</string>
    <string name="vencimento_hint">00/00</string>
    <string name="cvv">CVV</string>
    <string name="cvv_hint">000</string>
    <string name="comprar">Comprar</string>
    <string name="autor">Por: %s</string>
    <string name="editora">Editora: %s</string>
</resources>