<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayActivity"
    android:padding="12dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pay_numero_cartao"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_cartao"
        app:expandedHintEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/numero_cartao_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:id="@+id/pay_cartao_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/vencimento"
        app:expandedHintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/pay_numero_cartao"
        app:layout_constraintEnd_toStartOf="@id/pay_cartao_cvv"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/vencimento_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="12dp"
        android:layout_marginStart="6dp"
        android:id="@+id/pay_cartao_cvv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cvv"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pay_numero_cartao"
        app:layout_constraintStart_toEndOf="@id/pay_cartao_data">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/cvv_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/pay_cartao_data"
        android:id="@+id/pay_cartao_comprar"
        android:text="@string/comprar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>